--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+/* @import url('https://fonts.googleapis.com/css?family=Poppins:wght@400;500;600;700&display=swap'); */
+
+
 :root {
   --primary: #1f3e72;
   --secondary: rgba(255, 255, 255, 0.78);
@@ -80,6 +83,21 @@ a {
   color: orange;
   font-size: 1.5rem;
   font-weight: 600;
+}
+
+.button{
+  font-weight: 500;
+  padding: 0.6rem 1.4rem;
+  color: white;
+  background: var(--blue-gradient);
+  border: none;
+  border-radius: 4px;
+  transition: all 300ms ease-in;
+}
+
+.button:hover{
+  cursor: pointer;
+  transform: scale(1.1);
 }
 
 /* media queries */
