Responsiveness and animation done

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -63,3 +63,29 @@
     scale: 1.1;
     box-shadow: var(--shadow);
 }
+
+@media (max-width:1024px) {
+    .c-container{
+        flex-direction: column;
+    }
+
+    .c-right{
+        justify-content: center;
+    }
+    .contactModes{
+        width: 100%;
+    }
+    .row{
+        flex-direction: column;
+        width: 100%;
+    }
+    .mode{
+        width: 100%;
+    }
+
+    @media (max-width:640px) {
+        .c-left{
+            align-items: center;
+        }
+    }
+}
