--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -15,16 +15,19 @@
     justify-content: space-between;
     margin-top: 0.2rem;
     cursor: pointer;
+    transition: all 200ms ease-in-out;
 }
 .f-follow .icon{
-    /* background: var(--blue); */
     border-radius: 100%;
     border: none;
     margin-left: 0.5rem;
     margin-right: 0.5rem;
+    
 }
 .f-follow>:hover{
-    background: var(--blue);
+    /* background: var(--blue); */
+    scale: 1.5;
+    
 }
 
 
@@ -42,3 +45,12 @@
     text-decoration: underline;
 }
 
+@media (max-width:768px) {
+    .f-container{
+        justify-content: center;
+    }
+    .f-container>div{
+        align-items: center !important;
+        text-align: center;
+    }   
+}
