--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -18,3 +18,33 @@
 .h-menu>*:hover{
     cursor: pointer;
 }
+
+/* Mobile view Header*/
+
+.menu-icon{
+    display: none;
+}
+
+@media (max-width:819px) {
+    .menu-icon{
+        display: block;
+
+    }
+
+    .h-menu{
+        color: var(--black);
+        position: absolute;
+        top: 4rem;
+        right: 2.5rem;
+        background: white;
+        flex-direction: column;
+        font-weight: 500;
+        padding: 3rem;
+        gap: 2rem;
+        z-index: 100;
+        border-radius: 10px;
+        align-items: flex-start;
+        box-shadow: 0px 4px 4px rgba(0,0,0,0.05);
+        transition: all 500ms ease-in;
+    }
+}
