--- a/src/components/Value/Value.css
+++ b/src/components/Value/Value.css
@@ -52,4 +52,20 @@
     font-size: 1.2rem;
 }
 
+@media (max-width:1024px) {
+    .v-container{
+        flex-direction: column;
+    }
+    
+    @media (max-width: 768px) {
+        .accordionButton .primaryText{
+            font-size: 0.8rem;
+        }
+    }
 
+    @media (max-width:640px) {
+        .v-right{
+            align-items: center;
+        }
+    }
+}
