Connected with server and created property page

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,8 @@
 .h-wrapper{
     /* background: var(--black); */
     color: white;
+    background: var(--black);
+    overflow: hidden;
 }
 
 .h-container{
