--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,8 @@
 .f-container{
     justify-content: space-between;
-    background: var(--lightBlue)
+    background: var(--lightBlue);
+    border: 0.5px solid rgba(0,0,0,0.148);
+    
 }
 
 .f-left{
